# global-monitoring

./: .env.example  README.md  bun.lockb  context.json  package.json
apps/fetch-be/: README.md  main.py  pyproject.toml
apps/fetch-be/app/: __init__.py
apps/main-be/: README.md  main.py  pyproject.toml
apps/main-be/app/: __init__.py
apps/main-be/app/database/: __init__.py
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  page.tsx  page_new.tsx  page_old.tsx
apps/web/app/(dash)/dashboard/: page.tsx  page_old.tsx
apps/web/app/signin/: page.tsx
apps/web/app/signup/: page.tsx
apps/web/components/ui/: card.tsx
temptest/: README.md  deviceMetrics.ts  index.ts  loggingService.ts  package.json  telemetry.ts
